Terminal Saved Output
Last login: Thu Aug  2 18:09:51 on ttys000
Hunters-MacBook-Air-2:~ HunterLai$ cd Documents
Hunters-MacBook-Air-2:Documents HunterLai$ cd workspace
Hunters-MacBook-Air-2:workspace HunterLai$ cd FeatherweightJavascript
Hunters-MacBook-Air-2:FeatherweightJavascript HunterLai$ make
mkdir -p generatedSrc/edu/sjsu/fwjs/parser
java -jar lib/antlr-4.7.1-complete.jar -no-listener -visitor FeatherweightJavaScript.g4 -o generatedSrc/edu/sjsu/fwjs/parser
mkdir -p build/edu/sjsu/fwjs
javac -cp lib/junit-4.12.jar:lib/hamcrest-core-1.3.jar:lib/antlr-4.7.1-complete.jar -d build src/edu/sjsu/fwjs/*.java testSrc/edu/sjsu/fwjs/*.java generatedSrc/edu/sjsu/fwjs/parser/*.java
src/edu/sjsu/fwjs/ExpressionBuilderVisitor.java:128: error: incompatible types: List<TerminalNode> cannot be converted to List<String>
        List<String> params = ctx.ID();
                                    ^
src/edu/sjsu/fwjs/ExpressionBuilderVisitor.java:129: error: cannot find symbol
        Expression body = visit(ctx.body()); //Nick: Adding visit()
                                   ^
  symbol:   method body()
  location: variable ctx of type FuncDeclContext
src/edu/sjsu/fwjs/ExpressionBuilderVisitor.java:136: error: cannot find symbol
		for (ExprContext ec : ctx.args().expr())
		                         ^
  symbol:   method args()
  location: variable ctx of type FuncApplContext
src/edu/sjsu/fwjs/ExpressionBuilderVisitor.java:138: error: incompatible types: List<ExprContext> cannot be converted to ParseTree
		return new FunctionAppExpr(visit(ctx.expr()), args);
		                                         ^
lNote: src/edu/sjsu/fwjs/Interpreter.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
4 errors
make: *** [all] Error 1
Hunters-MacBook-Air-2:FeatherweightJavascript HunterLai$ make run
echo "Running fwjsScripts/closure.fwjs"; java -cp build:lib/antlr-4.7.1-complete.jar edu.sjsu.fwjs.Interpreter fwjsScripts/closure.fwjs;  echo "Running fwjsScripts/examples.fwjs"; java -cp build:lib/antlr-4.7.1-complete.jar edu.sjsu.fwjs.Interpreter fwjsScripts/examples.fwjs;  echo "Running fwjsScripts/functions.fwjs"; java -cp build:lib/antlr-4.7.1-complete.jar edu.sjsu.fwjs.Interpreter fwjsScripts/functions.fwjs;  echo "Running fwjsScripts/operators.fwjs"; java -cp build:lib/antlr-4.7.1-complete.jar edu.sjsu.fwjs.Interpreter fwjsScripts/operators.fwjs;  echo "Running fwjsScripts/test.fwjs"; java -cp build:lib/antlr-4.7.1-complete.jar edu.sjsu.fwjs.Interpreter fwjsScripts/test.fwjs;  echo "Running fwjsScripts/controlStructs.fwjs"; java -cp build:lib/antlr-4.7.1-complete.jar edu.sjsu.fwjs.Interpreter fwjsScripts/controlStructs.fwjs;  echo "Running fwjsScripts/factorial.fwjs"; java -cp build:lib/antlr-4.7.1-complete.jar edu.sjsu.fwjs.Interpreter fwjsScripts/factorial.fwjs;  echo "Running fwjsScripts/lists.fwjs"; java -cp build:lib/antlr-4.7.1-complete.jar edu.sjsu.fwjs.Interpreter fwjsScripts/lists.fwjs;  echo "Running fwjsScripts/scoping.fwjs"; java -cp build:lib/antlr-4.7.1-complete.jar edu.sjsu.fwjs.Interpreter fwjsScripts/scoping.fwjs;  echo "Running fwjsScripts/while.fwjs"; java -cp build:lib/antlr-4.7.1-complete.jar edu.sjsu.fwjs.Interpreter fwjsScripts/while.fwjs;
Running fwjsScripts/closure.fwjs
'3 + 4;' evaluates to 7
Running fwjsScripts/examples.fwjs
'3 + 4;' evaluates to 7
Running fwjsScripts/functions.fwjs
'3 + 4;' evaluates to 7
Running fwjsScripts/operators.fwjs
'3 + 4;' evaluates to 7
Running fwjsScripts/test.fwjs
'3 + 4;' evaluates to 7
Running fwjsScripts/controlStructs.fwjs
'3 + 4;' evaluates to 7
Running fwjsScripts/factorial.fwjs
'3 + 4;' evaluates to 7
Running fwjsScripts/lists.fwjs
'3 + 4;' evaluates to 7
Running fwjsScripts/scoping.fwjs
'3 + 4;' evaluates to 7
Running fwjsScripts/while.fwjs
'3 + 4;' evaluates to 7
Hunters-MacBook-Air-2:FeatherweightJavascript HunterLai$ 
